--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "framer-motion": "^11.0.24",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^4.1.4",
+    "lottie-web": "^5.12.2",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-player": "^2.14.1",
+    "react-lottie": "^1.2.4",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
